--- a/hocon-keystore/pom.xml
+++ b/hocon-keystore/pom.xml
@@ -38,7 +38,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
-                    <descriptorRefs>src</descriptorRefs>
+                    <descriptorRefs>
+                        <descriptorRef>src</descriptorRef>
+                    </descriptorRefs>
                     <descriptors>
                         <descriptor>src/assembly/all.xml</descriptor>
                         <descriptor>src/assembly/dist.xml</descriptor>
